[package]
name = "ff-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# version = "0" is the same as
reqwest = { version = ">=0.0.0, <1.0.0", features = ["deflate", "gzip"] }
scraper = { version = "0.24.0", optional = true }
secure-string = {version = ">=0.0.0, <1.0.0" }
async-trait = "0.1"
steamworks = { version = ">=0.0.0, <1.0.0", optional = true }
thiserror = "2.0"
tracing="0.1"
url = { version = "2", optional = true }
sha1 = {version = ">=0.0.0, <1.0.0", optional = true}
hostname = { version = "0.4.1", optional = true }
whoami = { version = "2.0.0-pre.3", optional = true }
num_cpus = { version = "1", optional = true }
hex = { version = "0.4", optional = true }
blowfish = { version = "0.9.1", optional = true }
base64 = {version = "0.22", optional = true}

# Dependencies for examples
clap = { version = "4.0", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = ["global", "steam", "kr", "cn"]
global_shared = ["url", "sha1", "hostname", "num_cpus", "hex", "whoami", "scraper"]
steam = ["global_shared", "steamworks", "blowfish", "base64"]
global = ["global_shared"]
kr = []
cn = []
examples = ["clap", "tracing-subscriber", "tokio"]

[[example]]
name = "global_example"
required-features = ["global", "examples"]

